--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -1,12 +1,16 @@
-FROM ubuntu:latest
+FROM ubuntu:22.04
+# FROM python:3.10
 
-# Install Python 3.11 and Node.js 18
+# Install Python 3.10 and Node.js 18
 RUN apt update
 RUN apt install -y software-properties-common
-RUN add-apt-repository ppa:deadsnakes/ppa -y
+# RUN add-apt-repository ppa:deadsnakes/ppa -y
 RUN apt update
-RUN apt install -y sudo protobuf-compiler golang \
-	python3.11 python3.11-dev python3.11-venv nodejs npm
+RUN apt install -y sudo protobuf-compiler golang nodejs npm bash-completion
+# RUN apt install -y sudo protobuf-compiler golang \
+# 	python3.10 python3.10-dev python3.10-venv nodejs npm
+RUN apt install -y python3-pip 
+# RUN pip install --upgrade pip	
 RUN npm install -g typescript protoc-gen-js
 # https://github.com/chrusty/protoc-gen-jsonschema
 RUN go install github.com/chrusty/protoc-gen-jsonschema/cmd/protoc-gen-jsonschema@latest
