--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,7 @@
 {
     "recommendations": [
         "ms-python.vscode-pylance",
-        "ms-python.python"
+        "ms-python.python",
+        "zxh404.vscode-proto3"
     ]
 }
