--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,7 @@
     "recommendations": [
         "ms-python.vscode-pylance",
         "ms-python.python",
-        "zxh404.vscode-proto3"
+        "zxh404.vscode-proto3",
+        "littlefoxteam.vscode-python-test-adapter"
     ]
 }
